force-app/main/default/objects/Correos__c/Correos__c.object-meta.xml
<CustomObject>
    <label>Correos</label>
    <nameField>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Correos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>