force-app/main/default/objects/Correos__c/fields/Apellidos__c.field-meta.xml
<CustomField>
    <fullName>Apellidos__c</fullName>
    <label>Apellidos</label>
    <length>40</length>
    <type>Text</type>
</CustomField>