force-app/main/default/objects/Correos__c/fields/Cargo__c.field-meta.xml
<CustomField>
    <fullName>Cargo__c</fullName>
    <label>Cargo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afiliación Clientes Nuevos</fullName>
            </value>
            <value>
                <fullName>Compra de Dolar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>